# base-de-datos-INE

./: .replit  Pasted--COD-DPOP160-Nombre-Albacete-Total-Total-habitantes-Personas-Unida-1732805255023.txt  Pasted--COD-EPA11365-Nombre-Tasa-de-actividad-Almer-a-Ambos-sexos-Total-U-1733149691670.txt  Pasted--COD-EPA77038-Nombre-Tasa-de-actividad-Ambos-sexos-Total-Nacional-Total--1733212123057.txt  Pasted--Nombre-Teruel-Todas-las-explotaciones-SAU-sin-huertos-N-explotaciones-Valor-absoluto-D-1733135696263.txt  Pasted-1-Estructura-General-Nueva-Categor-a-Censo-Agrario-Filtros-Asociados-Tipo-de-Censo-Subcategor-1732869902709.txt  Pasted-Construcci-n-de-Consultas-a-la-API-del-INE-para-Datos-Estad-sticos-La-API-del-INE-permite-acceder-a--1732708778602.txt  Pasted-El-error-ocurre-por-una-combinaci-n-de-factores-que-incluyen-Error-de-Tipos-de-Retorno-en-la-Fun-1733134657039.txt  Pasted-Gu-a-para-A-adir-la-Categor-a-Tasa-de-Actividad-Paro-y-Empleo-Esta-gu-a-te-ayudar-a-integrar-la-1733137520394.txt  Pasted-Gu-a-para-A-adir-la-Categor-a-Tasa-de-Defunciones-por-Provincias-Esta-gu-a-te-permitir-integrar-l-1733300545053.txt  Pasted-Gu-a-para-A-adir-la-Categor-a-Tasa-de-Nacimientos-por-Provincias-Esta-gu-a-te-ayudar-a-integrar-u-1733235966174.txt  Pasted-Gu-a-para-Crear-una-Aplicaci-n-que-Consuma-la-API-JSON-del-INE-Objetivo-de-la-Aplicaci-n-El-prop-sit-1732706543805.txt  Pasted-Gu-a-para-a-adir-la-subcategor-a-Distribuci-n-general-de-la-superficie-agr-cola-utilizada-ecol-gica--1732886843118.txt  api_client.py  censo_agrario_provincia_provincia_albacete_20241129_102344.xlsx  main.py  (+29 more)
