[project]
name = "repl-nix-apiconsumoine"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.40.2",
    "xlsxwriter>=3.2.0",
]
